Fix allocation list icon alignment

--- a/client/src/app/site/pages/meetings/pages/meeting-settings/pages/meeting-settings-group-detail/components/allocation-list/allocation-list.component.scss
+++ b/client/src/app/site/pages/meetings/pages/meeting-settings/pages/meeting-settings-group-detail/components/allocation-list/allocation-list.component.scss
@@ -2,7 +2,11 @@
     display: flex;
     align-items: center;
 
-    mat-icon {
+    .delete-button {
+        margin-left: 4px;
+    }
+
+    .sep-line {
         margin: 0 8px;
 
         &.grey-out {
